--- a/src/app/people/list-people/list-people.component.html
+++ b/src/app/people/list-people/list-people.component.html
@@ -1,8 +1,11 @@
 <br>
 <div class="container">
+  <div class="form-group">
+    <input type="text" class="form-control" [(ngModel)]="searchText" placeholder="Search">
+  </div>
   <div class="row row-cols-md-2">
     <!-- <app-card-people *ngFor="let item of peopleData"></app-card-people> -->
-    <div class="col" *ngFor="let person of peopleData">
+    <div class="col" *ngFor="let person of peopleData | filter: searchText">
       <div class="card">
         <div class="card-body">
           <!-- <img
